<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>upo_laser_people_detector</name>
	<version>0.1.0</version>
	<description>People detection using 2D LiDAR and Deep Learning</description>
	<maintainer email="famozur@upo.es">famozur</maintainer>
	<license>MIT</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>
	<depend>rclcpp_components</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>visualization_msgs</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
